Fix search input text overflow.

--- a/assets/sass/components/global/_googlesitekit-entity-search.scss
+++ b/assets/sass/components/global/_googlesitekit-entity-search.scss
@@ -70,10 +70,12 @@
 			height: 34px;
 			margin: 0;
 			padding: 0;
+			padding-right: 32px;
 
 			@media ( min-width: $bp-wpAdminBarTablet ) {
 				border: 1px solid $c-entity-search-input-border;
 				padding: 0 16px;
+				padding-right: 32px;
 			}
 
 			&:focus {
